templates/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-cluster-ip
  namespace: car-serv
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: car-serv
  sessionAffinity: None
  type: ClusterIP
