templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-serv-ingress
  namespace: car-serv
spec:
  ingressClassName: nginx
  rules:
    - host: car-serv-onpre.devops.vn
      http:
        paths:
          - backend:
              service:
                name: car-serv-cluster-ip
                port:
                  number: 80
            path: /
            pathType: Prefix
